fixed footer issue not showing up on page

--- a/BurnoutGaming/wwwroot/css/Main.css
+++ b/BurnoutGaming/wwwroot/css/Main.css
@@ -173,7 +173,10 @@ dropdown {
 }
 
 @media screen and (max-width: 850px) {
-  .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: relative;
+    }
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
